feat: added the node fix for the tsconfig

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "deploy": "run-s build zip update"
   },
   "devDependencies": {
+    "@types/node": "^22.13.10",
     "esbuild": "^0.21.4",
     "npm-run-all2": "^6.2.0"
   },
