--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.11",
     "lucide-react": "^0.479.0",
+    "motion": "^12.4.11",
     "next": "15.1.0",
     "next-themes": "^0.4.5",
     "react": "^19.0.0",
