--- a/frontend/amplify.yml
+++ b/frontend/amplify.yml
@@ -13,7 +13,7 @@ applications:
           commands:
             - pnpm run build
       artifacts:
-        baseDirectory: dist
+        baseDirectory: .next
         files:
           - "**/*"
       cache:
