--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -20,13 +20,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 22
+      
+      - name: Install pnpm
+        run: npm install --global corepack@latest
 
       - name: Install Dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Build
-        run: npm run build
+        run: pnpm run build
 
       - name: Install zip
         run: sudo apt-get install -y zip
@@ -42,4 +45,4 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Deploy to AWS Lambda
-        run: aws lambda update-function-code --function-name hello --zip-file fileb://lambda.zip
+        run: aws lambda update-function-code --function-name hono-portfolio-backend --zip-file fileb://lambda.zip
