--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,13 +20,18 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 22 # You can change this to the desired Node.js version
+          node-version: 22
+          cache: 'pnpm'
+          cache-dependency-path: './frontend/pnpm-lock.yaml'
 
       - name: Install pnpm
         run: npm install --global corepack@latest
 
+      - name: Enable pnpm
+        run: corepack enable
+
       - name: Install Dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Run Build
         run: pnpm run build
@@ -44,12 +49,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
+          cache: 'pnpm'
+          cache-dependency-path: './backend/pnpm-lock.yaml'
       
       - name: Install pnpm
         run: npm install --global corepack@latest
 
+      - name: Enable pnpm
+        run: corepack enable
+
       - name: Install Dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Build
         run: pnpm run build
