--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "type": "module",
   "scripts": {
+    "dev": "tsx watch src/index.ts",
     "build": "esbuild --bundle --outfile=./dist/index.js --platform=node --target=node20 ./src/index.ts",
     "zip": "zip -j lambda.zip dist/index.js",
     "update": "aws lambda update-function-code --zip-file fileb://lambda.zip --function-name hello",
@@ -13,6 +14,8 @@
     "npm-run-all2": "^6.2.0"
   },
   "dependencies": {
-    "hono": "^4.7.4"
+    "@hono/node-server": "^1.13.8",
+    "hono": "^4.7.4",
+    "tsx": "^4.7.1"
   }
 }
