--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,11 +1,6 @@
 name: Deploy Backend to AWS Lambda
 run-name: ${{ github.actor }} is deploying backend to AWS Lambda 🚀
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'backend/**'
   pull_request:
     types: [closed]
     branches:
@@ -16,7 +11,7 @@ on:
 jobs:
   deploy:
     # Only run this job if the PR was merged or it's a direct push to main
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -53,4 +48,4 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Deploy to AWS Lambda
-        run: aws lambda update-function-code --function-name hono-portfolio-backend --zip-file fileb://lambda.zip
+        run: aws lambda update-function-code --function-name main-folio-backend-hono --zip-file fileb://lambda.zip
