--- a/backend/package.json
+++ b/backend/package.json
@@ -6,16 +6,22 @@
     "build": "esbuild --bundle --outfile=./dist/index.js --platform=node --target=node20 ./src/index.ts",
     "zip": "zip -j lambda.zip dist/index.js",
     "update": "aws lambda update-function-code --zip-file fileb://lambda.zip --function-name hello",
-    "deploy": "run-s build zip update"
+    "deploy": "run-s build zip update",
+    "migrate:gen": "drizzle-kit generate",
+    "migrate:push": "drizzle-kit migrate"
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
+    "drizzle-kit": "^0.30.5",
     "esbuild": "^0.21.4",
-    "npm-run-all2": "^6.2.0"
+    "npm-run-all2": "^6.2.0",
+    "tsx": "^4.19.3"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
-    "hono": "^4.7.4",
-    "tsx": "^4.7.1"
+    "@neondatabase/serverless": "^0.10.4",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.41.0",
+    "hono": "^4.7.4"
   }
 }
