--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch --env-file=.env src/index.ts",
     "build": "esbuild --bundle --outfile=./dist/index.js --platform=node --target=node20 ./src/index.ts",
     "zip": "zip -j lambda.zip dist/index.js",
     "update": "aws lambda update-function-code --zip-file fileb://lambda.zip --function-name hello",
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
+    "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.5",
     "esbuild": "^0.21.4",
     "npm-run-all2": "^6.2.0",
@@ -20,8 +21,8 @@
   "dependencies": {
     "@hono/node-server": "^1.13.8",
     "@neondatabase/serverless": "^0.10.4",
-    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
-    "hono": "^4.7.4"
+    "hono": "^4.7.4",
+    "zod": "^3.24.2"
   }
 }
