--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "backend",
+  "name": "main-folio-backend",
   "type": "module",
   "scripts": {
     "dev": "tsx watch --env-file=.env src/index.ts",
-    "build": "esbuild --bundle --outfile=./dist/index.js --platform=node --target=node20 ./src/index.ts",
-    "zip": "zip -j lambda.zip dist/index.js",
-    "update": "aws lambda update-function-code --zip-file fileb://lambda.zip --function-name hello",
-    "deploy": "run-s build zip update",
-    "migrate:gen": "drizzle-kit generate",
-    "migrate:push": "drizzle-kit migrate"
-  },
-  "devDependencies": {
-    "@types/node": "^22.13.10",
-    "dotenv": "^16.4.7",
-    "drizzle-kit": "^0.30.5",
-    "esbuild": "^0.21.4",
-    "npm-run-all2": "^6.2.0",
-    "tsx": "^4.19.3"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "@hono/node-server": "^1.13.8",
+    "@hono/node-server": "^1.14.4",
+    "hono": "^4.8.1",
     "@neondatabase/serverless": "^0.10.4",
     "drizzle-orm": "^0.41.0",
-    "hono": "^4.7.4",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10",
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1",
+    "typescript": "^5.8.3"
   }
 }
